add charts stuff to admin dashboard

--- a/src/main/resources/localization/locale_de.properties
+++ b/src/main/resources/localization/locale_de.properties
@@ -110,4 +110,7 @@ dashboard_page.month_deposits=Einzahlungen in diesem Monat
 dashboard_page.month_profit=Monatliches Einkommen
 dashboard_page.active_events_number=Aktive Ereignisse
 dashboard_page.active_events_bets_amount=Anzahl der Wetten auf aktive Ereignisse
+mybets_page.event=Veranstaltung
+mybets_page.bet=Wette
+mybets_page.result=Ergebnis
 
