--- a/src/main/resources/localization/locale_fr.properties
+++ b/src/main/resources/localization/locale_fr.properties
@@ -111,5 +111,8 @@ dashboard_page.month_deposits=Dépôts ce mois-ci
 dashboard_page.month_profit=Revenu mensuel
 dashboard_page.active_events_number=Événements actifs
 dashboard_page.active_events_bets_amount=Montant des paris sur les événements actifs
+mybets_page.event=Événement
+mybets_page.bet=Pari
+mybets_page.result=Résultat
 
 
