--- a/src/main/resources/localization/locale_ru.properties
+++ b/src/main/resources/localization/locale_ru.properties
@@ -110,4 +110,7 @@ dashboard_page.month_deposits=Депозитов за месяц
 dashboard_page.month_profit=Месячный доход
 dashboard_page.active_events_number=Активные события
 dashboard_page.active_events_bets_amount=Сумма ставок на активные события
+mybets_page.event=Событие
+mybets_page.bet=Ставка
+mybets_page.result=Результат
 
