--- a/src/main/resources/localization/locale.properties
+++ b/src/main/resources/localization/locale.properties
@@ -111,6 +111,9 @@ dashboard_page.month_registrations=Registrations this month
 dashboard_page.month_deposits=Deposits this month
 dashboard_page.active_events_number=Active events
 dashboard_page.active_events_bets_amount=Amount of bets on active events
+mybets_page.event=Event
+mybets_page.bet=Bet
+mybets_page.result=Result
 
 
 
